# monad-skeleton

./: .travis.yml  monad-skeleton.cabal
benchmark/: bench.hs
benchmarks/: Old.hs  bench.hs
src/Control/Category/: Spider.hs
src/Control/Monad/: Skeleton.hs  Zombie.hs
