name:                monad-skeleton
version:             0.1.4
synopsis:            Monads of program skeleta
description:         Fast operational monad library
homepage:            https://github.com/fumieval/monad-skeleton
bug-reports:         http://github.com/fumieval/monad-skeleton/issues
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Control, Monads
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  .travis.yml
  .gitignore
  README.md
tested-with: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2

source-repository head
  type: git
  location: https://github.com/fumieval/monad-skeleton.git

library
  exposed-modules:     Control.Monad.Skeleton
    , Control.Monad.Skeleton.Internal
    , Control.Monad.Zombie
  build-depends:       base == 4.*
  hs-source-dirs: src
  ghc-options: -Wall
  default-language:    Haskell2010

benchmark old-new
  type:             exitcode-stdio-1.0
  main-is:          bench.hs
  other-modules:    Old
  ghc-options:      -Wall
  hs-source-dirs:   benchmarks
  build-depends:    base, monad-skeleton, criterion
  default-language: Haskell2010
